--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
             <br><hr>
             <b><h1>Men's Fasion</h1></b>
                      <div class="contaner">
-                    <div class="box"> <img src="men1.JPEG" ></div><br>
-                    <div class="box"><img src="men2.JPEG" > </div>
-                    <div class="box"><img src="men3.JPEG" > </div>
-                    <div class="box"><img src="men4.JPEG" > </div>
-                    <div class="box"><img src="men5.JPEG" > </div>
-                    <div class="box"><img src="men6.JPEG" ></div>
+                    <div class="box"> <img src="men1.jpeg" ></div><br>
+                    <div class="box"><img src="men2.jpeg" > </div>
+                    <div class="box"><img src="men3.jpeg" > </div>
+                    <div class="box"><img src="men4.jpeg" > </div>
+                    <div class="box"><img src="men5.jpeg" > </div>
+                    <div class="box"><img src="men6.jpeg" ></div>
                      </div>
             <p style="text-align: right;"><a href="#" style="color: blue;">...See More</a><hr></p>
             <br><hr>
