--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
             <br><hr>
             <b><h1>Women's Fashion</h1></b>
                     <div class="contaner">
-                   <div class="box">  <img src="L20.JPEG" > </div>
-                    <div class="box">  <img src="d2.JPEG"> </div>
-                    <div class="box">  <img src="t16.JPEG" > </div>
-                     <div class="box">  <img src="t14.JPEG"> </div>
-                     <div class="box">  <img src="L1.JPEG"> </div>
+                   <div class="box">  <img src="L20.jpeg" > </div>
+                    <div class="box">  <img src="d2.jpeg"> </div>
+                    <div class="box">  <img src="t16.jpeg" > </div>
+                     <div class="box">  <img src="t14.jpeg"> </div>
+                     <div class="box">  <img src="L1.jpeg"> </div>
                       <div class="box"> <img src="s1.JPG"> </div>
                     </div>
                 
@@ -117,12 +117,12 @@
             <br><hr>
             <b><h1>Kid's Fashion</h1></b>
                     <div class="contaner">
-                    <div class="box"><img src="k1.JPEG" ></div>
-                    <div class="box"> <img src="k2.JPEG"></div>
-                     <div class="box"><img src="k3.JPEG"> </div>
-                    <div class="box"><img src="k4.JPEG"> </div>
-                     <div class="box"><img src="k5.JPEG"> </div>
-                    <div class="box"><img src="k6.JPEG"> </div>
+                    <div class="box"><img src="k1.jpeg" ></div>
+                    <div class="box"> <img src="k2.jpeg"></div>
+                     <div class="box"><img src="k3.jpeg"> </div>
+                    <div class="box"><img src="k4.jpeg"> </div>
+                     <div class="box"><img src="k5.jpeg"> </div>
+                    <div class="box"><img src="k6.jpeg"> </div>
                     </div>
                 
            <p style="text-align: right;"><a href="#" style="color: blue;" align="right">....See More</a><hr></p>
