--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <li><a href="#"><i class="fas fa-qrcode"></i>Dashboard</a></li>
                 <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fas fa-men"></i>men</a></li>
+                <li><a href="https://https-shopihub-com.github.io/mensshopping.github.io/"><i class="fas fa-men"></i>men</a></li>
                 <li><a href="#"><i class="fas fa-women"></i>Women</a></li>
                 <li><a href="#"><i class="fas fa-kids"></i>Kids</a></li>
                 <li><a href="#"><i class="fas fa-device"></i>Electronic</a></li>
@@ -101,7 +101,7 @@
                     <div class="box"><img src="men5.jpeg" > </div>
                     <div class="box"><img src="men6.jpeg" ></div>
                      </div>
-            <p style="text-align: right;"><a href="#" style="color: blue;">...See More</a><hr></p>
+            <p style="text-align: right;"><a href="https://https-shopihub-com.github.io/mensshopping.github.io/" style="color: blue;">...See More</a><hr></p>
             <br><hr>
             <b><h1>Women's Fashion</h1></b>
                     <div class="contaner">
