--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#"><i class="fas fa-qrcode"></i>Dashboard</a></li>
                 <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="https://https-shopihub-com.github.io/mensshopping.github.io/"><i class="fas fa-men"></i>men</a></li>
-                <li><a href="#"><i class="fas fa-women"></i>Women</a></li>
+                <li><a href="https://https-shopihub-com.github.io/women.github.io/"><i class="fas fa-women"></i>Women</a></li>
                 <li><a href="#"><i class="fas fa-kids"></i>Kids</a></li>
                 <li><a href="#"><i class="fas fa-device"></i>Electronic</a></li>
                 <li><a href="#"><i class="fas fa-cart"></i>cart</a></li>
@@ -113,7 +113,7 @@
                       <div class="box"> <img src="s1.JPG"> </div>
                     </div>
                 
-             <p style="text-align: right;"><a href="#" style="color: blue;">...See More</a><hr></p>
+             <p style="text-align: right;"><a href="https://https-shopihub-com.github.io/women.github.io/" style="color: blue;">...See More</a><hr></p>
             <br><hr>
             <b><h1>Kid's Fashion</h1></b>
                     <div class="contaner">
