--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
                     </div><br>
                     <div class="phone">
                         <span class="fas fa-phone-alt"></span>&nbsp
-                        <span class="text">+91 8446725772</span>
+                        <span class="text">+91 123456789</span>
                     </div><br>
                     <div class="email">
                         <span class="fas fa-envelope"></span>&nbsp
-                        <span class="text">priyankavhargar@gmail.com</span>
+                        <span class="text">shopi.hub1@gmail.com</span>
                     </div><br>
                 </div>
             </div>
