--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <center>
             <h3>
             <nav>
-            <a href="#Mens" style="color: white;">Mens</a> &nbsp; &nbsp;&nbsp;
-            <a href="#Women" style="color: white;">Women</a> &nbsp; &nbsp; &nbsp;
+            <a href="https://https-shopihub-com.github.io/mensshopping.github.io/" style="color: white;">Mens</a> &nbsp; &nbsp;&nbsp;
+            <a href="https://https-shopihub-com.github.io/women.github.io/" style="color: white;">Women</a> &nbsp; &nbsp; &nbsp;
             <a href="#Kids" style="color: white;">Kids</a> &nbsp; &nbsp; &nbsp;
             <a href="#Electronic" style="color: white;">Electronic</a> &nbsp; &nbsp;
         </h3>
