--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          <form class="model-content animate" action="#" method="POST">
              <div class="img">
             <span onclick="document.getElementById('modali').style.display='none'"class="close" title="close button">&times;</span>
-            <img src="shopping.JPEG" alt="Avatar" class="avatar">  
+            <img src="shopping.jpeg" alt="Avatar" class="avatar">  
             </div>
              <font align="left">
              <div class="container">
