--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="box">  <img src="t16.jpeg" > </div>
                      <div class="box">  <img src="t14.jpeg"> </div>
                      <div class="box">  <img src="L1.jpeg"> </div>
-                      <div class="box"> <img src="s1.JPG"> </div>
+                      <div class="box"> <img src="s1.jpg"> </div>
                     </div>
                 
              <p style="text-align: right;"><a href="https://https-shopihub-com.github.io/women.github.io/" style="color: blue;">...See More</a><hr></p>
