--- a/Our_Team.html
+++ b/Our_Team.html
@@ -51,6 +51,9 @@
                 </div>
 
                 <div class="team_member">
+                    <div class="team_img">
+                        <img src="team5.jpeg" alt="team_member_image">
+                    </div>
                     <h3>Muddassir Mujawar</h3>
                     <p class="role">Sub page Developer</p>
                     <p>From ADCET, Ashta. The student of S.Y - CSE.</p>
