--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="box"><img src="men5.jpeg" > </div>
                     <div class="box"><img src="men6.jpeg" ></div>
                      </div>
-            <p style="text-align: right;"><a href="https://https-shopihub-com.github.io/mensshopping.github.io/" style="color: blue;">...See More</a><hr></p>
+            <p style="text-align: right;"><a href="https://https-shopihub-com.github.io/mens.github.io/" style="color: blue;">...See More</a><hr></p>
             <br><hr>
             <b><h1>Women's Fashion</h1></b>
                     <div class="contaner">
